[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "toadhf"
version         = "0.3.0"
description     = "Tone-over-Audio Digital modem for HF radios"
readme          = "README.md"
authors         = [
  { name="ToAD-HF Contributors", email="glick@glick.cloud" }
]
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "sounddevice>=0.4.6",
  "soundfile>=0.12",
  "prompt_toolkit>=3.0",
  "pyhamlib",          # thin wrapper for hamlib/rigctl
  "matplotlib>=3.8 ; extra == 'plots'",   # optional, see below
  "pyserial",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/benhg/toadhf"
Issues   = "https://github.com/benhg/toadhf/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["examples*", "recordings*", "docs*"]

[project.scripts]
toad_terminal = "toadhf.cli:main"
list_toad_devices = "toadhf.cli:print_device_summary"
